infra/registry/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: meu-gateway-dualstack
      namespace: default
      sectionName: https
  hostnames:
    - harbor.aesthar.com.br
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: harbor-core
          namespace: harbor
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /service/
        - path:
            type: PathPrefix
            value: /v2/
        - path:
            type: PathPrefix
            value: /c/
    - backendRefs:
        - group: ""
          kind: Service
          name: harbor-portal
          namespace: harbor
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
